[gd_scene load_steps=5 format=3 uid="uid://bitw81tkqx3mt"]

[ext_resource type="Script" path="res://scripts/tree_resource.gd" id="1_cr84n"]
[ext_resource type="Texture2D" uid="uid://b5x803dbl5osu" path="res://assets/tree.png" id="2_i4ys3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uf4i6"]
size = Vector2(96, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x586i"]
size = Vector2(72, 48)

[node name="TreeResource" type="Node2D" groups=["resources"]]
script = ExtResource("1_cr84n")

[node name="TreeSprite" type="Sprite2D" parent="."]
z_index = 1
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_i4ys3")

[node name="TreeArea" type="Area2D" parent="."]

[node name="TreeCollision" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-24, 104)
shape = SubResource("RectangleShape2D_uf4i6")

[node name="InteractLabel" type="Label" parent="."]
visible = false
z_index = 1
offset_left = -16.0
offset_top = 56.0
offset_right = -7.0
offset_bottom = 79.0
text = "E"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-24, 88)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(4, 16)
shape = SubResource("RectangleShape2D_x586i")

[connection signal="body_entered" from="TreeArea" to="." method="_on_tree_area_body_entered"]
[connection signal="body_exited" from="TreeArea" to="." method="_on_tree_area_body_exited"]
